--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Simple website</title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
-    
+    <div>
+        <h3>My first website</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia temporibus cumque, vitae atque facere nisi amet consectetur iure, repellat obcaecati hic! Ex laborum qui inventore rem necessitatibus minima, nihil reprehenderit!</p>
+    </div>
 </body>
 </html>
