--- a/index.html
+++ b/index.html
@@ -11,5 +11,13 @@
         <h3>My first website</h3>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia temporibus cumque, vitae atque facere nisi amet consectetur iure, repellat obcaecati hic! Ex laborum qui inventore rem necessitatibus minima, nihil reprehenderit!</p>
     </div>
+    <div>
+        <h3>My second website</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia temporibus cumque, vitae atque facere nisi amet consectetur iure, repellat obcaecati hic! Ex laborum qui inventore rem necessitatibus minima, nihil reprehenderit!</p>
+    </div>
+    <div>
+        <h3>My third website</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia temporibus cumque, vitae atque facere nisi amet consectetur iure, repellat obcaecati hic! Ex laborum qui inventore rem necessitatibus minima, nihil reprehenderit!</p>
+    </div>
 </body>
 </html>
