--- a/index.html
+++ b/index.html
@@ -23,5 +23,9 @@
         <h3>My fourth website</h3>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia temporibus cumque, vitae atque facere nisi amet consectetur iure, repellat obcaecati hic! Ex laborum qui inventore rem necessitatibus minima, nihil reprehenderit!</p>
     </div>
+    <div>
+        <h3>pic</h3>
+        <img src="images/flower.jpg" alt="">
+    </div>
 </body>
 </html>
